test/expected/perr_function_no_body.out
shit: 2:1: error: Expected a compound command as the function body.
     2 |  foo()
       |  ^~~ here.
